# agent-automation

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  lefthook.yml
config/: settings.toml
docs/plans/: 2025-03-19-electron-test-agent-design.md  2025-03-19-electron-test-agent-implementation.md
src/: config.rs  error.rs  logging.rs  main.rs  models.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/engine/: agent.rs  browser.rs  mod.rs
src/installer/: download.rs  extract.rs  launch.rs  mod.rs
src/llm/: claude.rs  client.rs  mod.rs  openai.rs
src/orchestrator/: executor.rs  mod.rs  store.rs
src/reporter/: feishu.rs  html.rs  mod.rs
templates/: report.html
